2006-06-28  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/autoconf.texi: Be more consistent about using @acronym with
	"HP" and "HP-UX".  Remove mention of OSF; the old version wasn't
	quite right (it talked about "OSF/Tru64", even though the
	operating systems were called OSF/1, Digital UNIX, and Tru64 UNIX,
	and it even mentioned "OSF 4"!) and at this point there's little
	reason to talk about OSF any more, since it died in 1994.
	(Specific Compiler Characteristics): Simplify example of
	negative-size array.
	(File Descriptors): Reorder to make the text flow better.
	Remove joke about "appreciate the various levels"; I didn't get it.
	Add remark about HP-UX sh -x bug with stderr noted by Bob Proulx in
	<http://lists.gnu.org/archive/html/bug-coreutils/2006-06/msg00225.html>.
	(File Descriptors, Limitations of Usual Tools):
	Tone down the advice against renaming or removing open files.
	(Limitations of Usual Tools): Add a new section, on 'rm'.

2006-06-26  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/libs.m4 (_AC_PATH_X_DIRECT): Use -lX11, not
	-lXt in LIBS, idea from Karsten Hopp; this was due since
	this change:

	2005-09-18  Paul Eggert  <eggert@cs.ucla.edu>
	* lib/autoconf/libs.m4 (_AC_PATH_X_DIRECT): Look for X11/Xlib.h
	and XrmInitialize rather than X11/Intrinsic.h and XtMalloc
	(which belong to Xt, not X itself).  See Debian bug 327655.

2006-06-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac (AC_INIT): Bump to 2.60a.
	* NEWS: Update.

2006-06-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Version 2.60.

	* configure.ac, NEWS: Update.

2006-06-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* config/texinfo.tex: Sync from upstream.

	* bin/autom4te.in (handle_traces): Transform the `@S|@'
	quadrigraph correctly in traces.

	* NEWS, lib/Autom4te/C4che.pm, lib/autoconf/functions.m4:
	Fix typos.

	* lib/autoconf/status.m4 (_AC_OUTPUT_FILE): Expand tests for
	datarootdir-related errors only if AC_DATAROOTDIR_CHECKED is
	not defined.