@@ -840,7 +840,7 @@ AT_CHECK([test -f inner/configure])
 
 # Running the outer configure recursively should provide the innermost
 # help strings.
-AT_CHECK([./configure --help=recursive | grep INNER], 0, [ignore])
+AT_CHECK([CONFIG_SITE=no-such-file ./configure --help=recursive | grep INNER], 0, [ignore])
 
 # Running the outer configure should trigger the inner.
 AT_CHECK_CONFIGURE
@@ -853,7 +853,7 @@ prefix=/usr/local
 
 # The same, but from a builddir.
 AS_MKDIR_P([builddir])
-AT_CHECK([cd builddir && ../configure], 0, [ignore])
+AT_CHECK([cd builddir && CONFIG_SITE=no-such-file ../configure], 0, [ignore])
 AT_CHECK([cat builddir/inner/innermost/config], 0,
 [INNER=inner
 srcdir=../../../inner/innermost
@@ -866,7 +866,7 @@ prefix=/usr/local
 # that if the user has set config.site to have a config.cache, then
 # the two runs don't have colliding caches.
 AS_MKDIR_P([builddir2])
-AT_CHECK([cd builddir2 && ../configure --prefix /bad --prefix /good INNER=bad INNER=good], 0, [ignore])
+AT_CHECK([cd builddir2 && CONFIG_SITE=no-such-file ../configure --prefix /bad --prefix /good INNER=bad INNER=good], 0, [ignore])
 AT_CHECK([cat builddir2/inner/innermost/config], 0,
 [INNER=good
 srcdir=../../../inner/innermost
