@@ -1,3 +1,11 @@
+2006-06-30  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* tests/torture.at (Configuring subdirectories): Set CONFIG_SITE
+	to a nonexistent file, so that we don't have to worry about
+	a local site configuration that doesn't use /usr/local.
+	Problem reported by Keith Marshall in
+	<http://lists.gnu.org/archive/html/bug-autoconf/2006-06/msg00133.html>.
+
 2006-06-28  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* doc/autoconf.texi: Be more consistent about using @acronym with
